REST: Use generic error for patched-sitelink-invalid-badge
Replacing it with patch-result-invalid-value.

Bug: T372273
