# repo/rest-api/src/RouteHandlers/ErrorResponseToHttpStatus.php
@@ -65,7 +65,6 @@ class ErrorResponseToHttpStatus {
 		UseCaseError::PATCHED_PROPERTY_INVALID_OPERATION_CHANGE_PROPERTY_ID => 422,
 		UseCaseError::PATCH_RESULT_MISSING_FIELD => 422,
 		UseCaseError::PATCHED_SITELINK_BADGES_FORMAT => 422,
-		UseCaseError::PATCHED_SITELINK_INVALID_BADGE => 422,
 		UseCaseError::PATCHED_SITELINK_INVALID_TITLE => 422,
 		UseCaseError::PATCHED_SITELINK_TITLE_DOES_NOT_EXIST => 422,
 		UseCaseError::PATCHED_SITELINK_TITLE_EMPTY => 422,
